--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -39,3 +39,18 @@ body {
     }
   }
 }
+
+@keyframes parallax {
+  0% {
+    background-position: 0% 0%;
+  }
+  100% {
+    background-position: 100% 100%;
+  }
+}
+
+.animate-parallax {
+  background-size: 200% 200%;
+  animation: parallax 60s linear infinite;
+}
+
